Fix the service grid component scale when hover issue & Fix the overflow-x issue in mobile screens.

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@ html,
 body {
   scroll-behavior: smooth;
   background-color: #fff;
+  overflow-x: hidden;
 }
 h1 {
   font-family: 'Anton';
